# qml-orientation

./: .gitignore  CMakeLists.txt  Main.qml  main.cpp  rotation.cpp  rotation.h
android/: AndroidManifest.xml  build.gradle  gradle.properties
android/assets/: android_rcc_bundle.rcc
android/src/com/example/orientation/: MainActivity.java
